--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon app.js",
     "production": "node app.js"
   },
-  "author": "Dilip",
+  "author": "Quartz",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
